[gd_scene load_steps=13 format=2]

[ext_resource path="res://assets/guywalking.png" type="Texture" id=1]
[ext_resource path="res://src/Zombie.gd" type="Script" id=2]
[ext_resource path="res://assets/chatter5.wav" type="AudioStream" id=3]
[ext_resource path="res://assets/chatter1.wav" type="AudioStream" id=4]
[ext_resource path="res://assets/chatter2.wav" type="AudioStream" id=5]
[ext_resource path="res://assets/chatter3.wav" type="AudioStream" id=6]
[ext_resource path="res://assets/chatter4.wav" type="AudioStream" id=7]
[ext_resource path="res://assets/footsteps.mp3" type="AudioStream" id=8]

[sub_resource type="CapsuleShape" id=1]
radius = 0.802601

[sub_resource type="Animation" id=2]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("../Sprite3D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}

[sub_resource type="Animation" id=3]
resource_name = "die"
length = 0.75
step = 0.15
tracks/0/type = "value"
tracks/0/path = NodePath("../Sprite3D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.15, 0.3, 0.45, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 5, 6, 7, 8, 9 ]
}

[sub_resource type="Animation" id=4]
resource_name = "walk"
length = 0.3
loop = true
step = 0.075
tracks/0/type = "value"
tracks/0/path = NodePath("../Sprite3D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.075, 0.15, 0.225 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3 ]
}

[node name="Zombie" type="KinematicBody"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.3, 0 )
script = ExtResource( 2 )

[node name="CollisionShape" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0 )
shape = SubResource( 1 )

[node name="RayCast" type="RayCast" parent="."]
enabled = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
root_node = NodePath("../RayCast")
anims/RESET = SubResource( 2 )
anims/die = SubResource( 3 )
anims/walk = SubResource( 4 )

[node name="Sprite3D" type="Sprite3D" parent="."]
billboard = 2
texture = ExtResource( 1 )
hframes = 5
vframes = 2

[node name="PathTimer" type="Timer" parent="."]
wait_time = 0.1
one_shot = true
autostart = true

[node name="DieTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="ChatterTimer" type="Timer" parent="."]
one_shot = true

[node name="Chatter1" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource( 4 )

[node name="Chatter2" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource( 5 )

[node name="Chatter3" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource( 6 )

[node name="Chatter4" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource( 7 )

[node name="Chatter5" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource( 3 )

[node name="WalkSound" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource( 8 )
unit_db = 20.0
pitch_scale = 2.0
autoplay = true

[connection signal="timeout" from="PathTimer" to="." method="_on_PathTimer_timeout"]
[connection signal="timeout" from="DieTimer" to="." method="_on_DieTimer_timeout"]
[connection signal="timeout" from="ChatterTimer" to="." method="_on_ChatterTimer_timeout"]
